src/scss/modules/alert-highlight-box/_recuadros.scss
/**
 * RECUADROS
 */
/**
 * Definición para los temas de color.
 */
$colorThemesRecuadro: (
    "azul": (themeColor: $brand-arg-azul,
        buttonColor: white,
    ),
    "secundario": (themeColor: $brand-arg-secundario,
        buttonColor: white,
    ),
    "palta": (themeColor:$brand-arg-palta,
        buttonColor: palta,
    ),
    "uva": (themeColor: $brand-arg-uva,
        buttonColor: white,
    ),
    "rosado": (themeColor:$brand-arg-rosado,
        buttonColor: black,
    ),
    "arandano": (themeColor: $brand-arg-arandano,
        buttonColor: white,
    ),
);



#{$recuadrosScope} {
    --icon-size: 2rem;


    width: calc(100% - var(--main-shadow-spread-size));
    position: relative;
    background: white;
    border-top: none;
    border-right: none;
    border-bottom: none;
    border-left: var(--main-border-left-weight) solid var(--main-theme);
    border-radius: 2px;
    padding: var(--main-padding) var(--main-padding) var(--main-padding) var(--media-col-gap);
    margin-bottom: $grid-gutter-width;
    color: #555;
    background-color: white;
    box-shadow: var(--main-box-shadow);

    // Si el componente no tiene icono
    &:not(:has(.media-left)) {
        padding: var(--main-padding);
    }

    // REDEFINIMOS MEDIA
    .media {
        grid-template-columns: calc(var(--icon-size) + 1.5em) 1fr;
        display: grid;
        gap: var(--media-col-gap);

        &:not(:has(.media-left)) {
            grid-template-columns: 1fr;
        }

        .media-left {
            padding: {
                left: 0;
                right: 0;
                top: 0;
                bottom: 0;
            }

            text-align: center;
        }

        .media-body {
            width: auto;
            align-self: center;
        }

        .h5,
        *.h5,
        h5 {
            margin-top: 0.5em;
            margin-bottom: 0.5em;
        }
    }

    // Corrección de tamaños.
    .fa-1x,
    .fa-2x,
    .fa-4x,
    .fa-3x,
    .fa-5x {
        font-size: var(--icon-size) !important;
    }

    i {
        color: var(--main-theme)
    }

    p {
        margin-bottom: 1em;

        &:last-of-type {
            margin-bottom: 0;
        }
    }

    .btn {
        @include button-variant(#fff, #555, #555);
    }
}

@media (max-width: 768px) {
    #{$recuadrosScope} {
        padding: var(--main-padding);

        .media {
            grid-template-columns: none;
            grid-template-rows: auto;
            row-gap: var(--media-row-gap);

            .media-left {
                text-align: left;
            }
        }
    }
}

@each $themeName, $themeValues in $colorThemesRecuadro {
    #{$recuadrosScope}.arg-#{$themeName} {
        --main-theme: #{map-get($themeValues, themeColor)};
    }

    #{$recuadrosScope}.arg-#{$themeName} .btn {
        @include button-variant(map-get($themeValues, buttonColor),
            map-get($themeValues, themeColor),
            map-get($themeValues, themeColor));
    }
}

